# timeline

./: README.md  stack.yaml  timeline.cabal
app/: Main.hs
server/: Main.hs
server/Timeline/Server/: Json.hs  Server.hs
src/: Timeline.hs
src/Timeline/: Parser.hs  Statistics.hs  Types.hs
src/Timeline/Parser/: Aggregate.hs  Graph.hs  Internal.hs
test/Timeline/: TimelineSpec.hs
