name:                timeline
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/timeline#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Timeline
  other-modules:       Timeline.Types
                     , Timeline.Parser
                     , Timeline.Parser.Internal
                     , Timeline.Parser.Aggregate
                     , Timeline.Parser.Graph
                     , Timeline.Statistics
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5 && < 6
                     , text
                     , scientific
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable timeline
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timeline
                     , text
  default-language:    Haskell2010

executable timeline-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timeline
                     , aeson
                     , scotty
                     , wai
                     , wai-extra
                     , warp
                     , transformers
                     , http-types
                     , time
                     , text
                     , mtl
                     , vector
                     , scientific
                     , optparse-applicative
  other-modules:       Timeline.Server.Server
                     , Timeline.Server.Json
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite timeline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timeline
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/timeline
